--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -133,8 +133,8 @@ repos:
             .min(.js|.js.map)|
             static/(.*)/libs/
           )
-        #args:
-        #  - --fix
+        args:
+          - --fix
 
   - repo: https://github.com/thibaudcolas/pre-commit-stylelint
     rev: v16.18.0
