[CHANGE] Refactor Assets (#11)
* [ADD] Cache Buster

* [CHANGE] Update Log Timing Decorator

* [CHANGE] Update ETag System

* [CHANGE] Refactor Assets System

* [CHANGE] Handle Buttons in Python, Added

* [CHANGE] Update modals

* Update Changelog

* [ADD] Multi Buy Modal, Update Java, Test stuff

* Finalize Refactoring

* Update Text

* [ADD] New Migrations

* [FIX] Permission Issue

* [CHANGE] Task Update Interval

* [FIX] Django IntigrityError

* [FIX] Task Interval

* [CHANGE] Update `add_char` and `add_corp`

* [ADD] Order Update System

* [ADD] Discord Notification System

* [FIX] Naming

* Refactor Assets

- Updated the shared ESI client for assets.
- Enhanced JavaScript functionality for assets and requests tables, including error handling and data loading.
- Introduced new location management features with a dedicated page and table.
- Created a new requests management page with improved structure and JavaScript integration.
- Refactored HTML templates for better organization and modularity, including navigation and modal components.
- Updated URL routing to accommodate new views for assets and locations.
- Improved permission handling for various views and actions within the assets module.
- Removed deprecated static file handling in favor of SRI for enhanced security.

* Merge remote-tracking branch 'origin/master' into refactor-assets

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -133,8 +133,8 @@ repos:
             .min(.js|.js.map)|
             static/(.*)/libs/
           )
-        #args:
-        #  - --fix
+        args:
+          - --fix
 
   - repo: https://github.com/thibaudcolas/pre-commit-stylelint
     rev: v16.21.1
@@ -309,7 +309,7 @@ repos:
         name: Pylint
         description: Check for errors and code smells in Python code.
         args:
-          - --py-version=3.8  # Minimum required Python version for AA. Update as needed.
+          - --py-version=3.10  # Minimum required Python version for AA. Update as needed.
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.33.2
