--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@
 default_language_version:
   # force all unspecified python hooks to run python3
   python: python3
+  node: 22.19.0 # LTS https://nodejs.org/en/blog/release/
 
 # https://pre-commit.ci/
 ci:
@@ -20,6 +21,16 @@ ci:
   skip:
     - eslint  # Fails due to missing node environment in CI
   submodules: false
+
+# https://pre-commit.com/#pre-commit-configyaml---top-level
+exclude: |
+  (?x)(
+    .github/|
+    LICENSE|
+    .min(.css|.css.map|.js|.js.map)|
+    locale/|
+    static/(.*)/libs/
+  )
 
 # pre-commit setup
 repos:
@@ -75,12 +86,6 @@ repos:
         name: Fix requirements.txt
         description: Fix the formatting of requirements.txt files.
 
-      - id: fix-encoding-pragma
-        name: Fix encoding pragma
-        description: Fix the encoding pragma in Python files.
-        args:
-          - --remove
-
       - id: fix-byte-order-marker
         name: Fix byte order marker
         description: Fix the byte order marker in Python files.
@@ -101,12 +106,6 @@ repos:
         description: Check for trailing whitespace.
         args:
           - --markdown-linebreak-ext=md
-        exclude: |
-          (?x)(
-            .min(.css|.css.map|.js|.js.map)|
-            locale/|
-            static/(.*)/libs/
-          )
 
       - id: check-executables-have-shebangs
         name: Check for shebangs in executables
@@ -115,12 +114,6 @@ repos:
       - id: end-of-file-fixer
         name: End of file fixer
         description: Ensure that files end with a newline.
-        exclude: |
-          (?x)(
-            .min(.css|.css.map|.js|.js.map)|
-            locale/|
-            static/(.*)/libs/
-          )
 
   - repo: https://github.com/eslint/eslint
     rev: v9.34.0
@@ -128,13 +121,7 @@ repos:
       - id: eslint
         name: ESLint
         description: Check for problems in JavaScript files.
-        exclude: |
-          (?x)(
-            .min(.js|.js.map)|
-            static/(.*)/libs/
-          )
-        args:
-          - --fix
+        args: [--fix, --color, --max-warnings, '0']
 
   - repo: https://github.com/thibaudcolas/pre-commit-stylelint
     rev: v16.23.1
@@ -142,17 +129,12 @@ repos:
       - id: stylelint
         name: Stylelint
         description: Check for problems in CSS files.
-        exclude: |
-          (?x)(
-            .min(.css|.css.map)|
-            static/(.*)/libs/
-          )
         args:
           - --formatter=compact
         additional_dependencies:
           # stylelint itself needs to be here when using additional_dependencies.
-          - stylelint@16.5.0  # https://github.com/stylelint/stylelint/releases/latest
-          - stylelint-config-standard@36.0.0  # https://github.com/stylelint/stylelint-config-standard/releases/latest
+          - stylelint@16.23.1  # https://github.com/stylelint/stylelint/releases/latest
+          - stylelint-config-standard@39.0.0  # https://github.com/stylelint/stylelint-config-standard/releases/latest
 
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
@@ -187,12 +169,6 @@ repos:
       - id: editorconfig-checker
         name: EditorConfig Checker
         description: Check for compliance with the definitions in the EditorConfig file.
-        exclude: |
-          (?x)(
-            LICENSE|
-            .min(.css|.css.map|.js|.js.map)|
-            static/(.*)/libs/
-          )
 
   - repo: https://github.com/adamchainz/django-upgrade
     rev: 1.27.0
@@ -210,7 +186,7 @@ repos:
         name: PyUpgrade
         description: Upgrade syntax to newer versions of Python.
         args:
-          - --py38-plus  # Minimum required Python version for AA. Update as needed.
+          - --py310-plus  # Minimum required Python version for AA. Update as needed.
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.3.0
@@ -247,7 +223,7 @@ repos:
         name: Black
         description: Format Python code.
         args:
-          - --target-version=py38  # Minimum required Python version for AA. Update as needed.
+          - --target-version=py310  # Minimum required Python version for AA. Update as needed.
 
   - repo: https://github.com/asottile/blacken-docs
     rev: 1.19.1
@@ -256,9 +232,9 @@ repos:
         name: Blacken docs
         description: Format Python code in documentation files.
         additional_dependencies:
-          - black==24.4.2  # https://github.com/psf/black/releases/latest
+          - black==25.1.0  # https://github.com/psf/black/releases/latest
         args:
-          - --target-version=py38  # Minimum required Python version for AA. Update as needed.
+          - --target-version=py310  # Minimum required Python version for AA. Update as needed.
 
   - repo: https://github.com/executablebooks/mdformat
     rev: 0.7.22
@@ -266,16 +242,11 @@ repos:
       - id: mdformat
         name: Mdformat
         description: Format Markdown files.
-        exclude: |
-          (?x)(
-            .github/|
-            static/(.*)/libs/
-          )
         additional_dependencies:
-          - mdformat-gfm==0.3.6  # Mdformat plugin for GitHub Flavored Markdown compatibility » https://github.com/hukkin/mdformat-gfm/tags
+          - mdformat-gfm==0.4.1  # Mdformat plugin for GitHub Flavored Markdown compatibility » https://github.com/hukkin/mdformat-gfm/tags
           - mdformat-toc==0.3.0  # Mdformat plugin to generate a table of contents » https://github.com/hukkin/mdformat-toc/tags
           - mdformat-black==0.1.1  # Mdformat plugin to Blacken Python code blocks » https://github.com/hukkin/mdformat-black/tags
-          - mdformat-shfmt==0.1.0  # Mdformat plugin to format shell code blocks » https://github.com/hukkin/mdformat-shfmt/tags
+          - mdformat-shfmt==0.2.0  # Mdformat plugin to format shell code blocks » https://github.com/hukkin/mdformat-shfmt/tags
 
   - repo: https://github.com/tox-dev/tox-ini-fmt
     rev: 1.6.0
@@ -293,7 +264,7 @@ repos:
         args:
           - --indent=4
         additional_dependencies:
-          - tox==4.15.0  # https://github.com/tox-dev/tox/releases/latest
+          - tox==4.29.0  # https://github.com/tox-dev/tox/releases/latest
 
   - repo: https://github.com/abravalheri/validate-pyproject
     rev: v0.24.1
